[fix] general layout width fixed but wrap timeline height pb

--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -5,27 +5,31 @@ app-nav-bar {
 
 }
 
+
+.content {
+    display: grid;
+    box-sizing: border-box;
+    padding: 0 4rem;
+    gap: 2rem;
+}
+
 @media screen and (max-width: 760px) {
     app-nav-bar {
         display: none;
+    }
 
+    .content {
+        padding: 0;
     }
 
 }
 
-.content {
-    display: grid;
-    gap: 2rem;
-}
 
 .content > div {
-    overflow: hidden;
     height: 100vh;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 0 4rem;
-    box-sizing: border-box;
 }
 
 
@@ -34,9 +38,9 @@ app-section-title {
 }
 
 .overview-content {
-    height: 100%;
     overflow: hidden;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     gap: 2rem;
     justify-content: center;
